crates/cli/tests/snapshots/run_legacy_test__run_legacy__noop__runs_noop.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ noop:noop (no op)

Tasks: 1 completed
 Time: 100ms
