crates/cli/tests/snapshots/run_legacy_test__run_legacy__noop__runs_noop_deps.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ outputs:generateFile
▮▮▮▮ outputs:generateFile (100ms)
▮▮▮▮ noop:noopWithDeps (no op)

Tasks: 2 completed
 Time: 100ms
